# poplar_explorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: io_utils.hpp  ipu_utils.hpp  tool_registry.hpp
python/fft/: fft.py  perf_analysis.py  plot.py  sweep.sh  sweep2d.sh  sweep_1d.sh  sweep_2d.sh
src/: io_utils.hpp  multi_tool.cpp  tool_registry.hpp
src/codelets/: simple.cpp
src/codelets/AmpOptimisations/: matrix4x4.cpp
src/codelets/CustomMatmul/: matrixops.cpp  worker_barrier.hpp
src/codelets/JpegDecoder/: jpeg.cpp
src/codelets/OptimisingVertices/: matrix4x4.cpp
src/codelets/OverlappedIO/: simple.cpp
src/fft/: CMakeLists.txt  FFTBuilder.cpp  FFTBuilder.hpp  complex.cpp  complex.hpp  fft.py  utils.cpp  utils.hpp
src/jpeg/: TileAlloc.hpp  debug_print.hpp  jpeg.hpp
src/keras/: CMakeLists.txt  Hdf5Model.hpp  model_to_hdf5.py
src/memory/: SoftwareCache.hpp  gather.hpp  scatter.hpp
src/neural_networks/: CMakeLists.txt  DenseLayer.hpp  IoBuffer.cpp  IoBuffer.hpp  NifMetaData.cpp  NifMetaData.hpp  NifModel.cpp  NifModel.hpp
src/tools/: AmpOptimisations.hpp  BasicTool.hpp  CustomMatmul.hpp  EmptyTool.hpp  FourierTransform.hpp  FourierTransform2D.hpp  GroupedMatmulBenchmark.cpp  GroupedMatmulBenchmark.hpp  JpegDecoder.hpp  KNNBenchmark.cpp  KNNBenchmark.hpp  MatmulBenchmark.cpp  MatmulBenchmark.hpp  MlpInference.hpp  OptimisingVertices.hpp  OverlappedIO.cpp  OverlappedIO.hpp  RemoteBufferBenchmark.cpp  RemoteBufferBenchmark.hpp  SoftwareCacheBenchmark.cpp  SoftwareCacheBenchmark.hpp
